# tuya-ble-mesh

./: .coverage  .env.example  .gitignore  .quality_scale.yaml  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLAUDE.md  COMMUNITY.md  CONTRIBUTING.md  COVERAGE_REPORT.md  FULL_CODEBASE.txt  HA_DOCS_DRAFT.md  ICON_REGRESSION_FIX.md  INSTALL_HA.sh  LEARNINGS.md  LICENSE  P3_PLAN.md  PEER_REVIEW_CHECKLIST.md  PLAT-733-ROOT-CAUSE-ANALYSIS.md  PREMIUM_UX_PLAN.md  PROJECT_SPEC.md  QUALITY_STATUS.md  README.md  RELEASE_NOTES_v0.19.0.md  ROADMAP.md  SECURITY.md  TODO.md  coverage.json  coverage_full.json  coverage_new.json  ha-error-logs-v012.txt  ha-error-logs.txt  hacs.json  install_to_ha.sh  package.json  playwright.config.ts  pyproject.toml  test_ha_ble_connect.py  tsconfig.json  verify.sh
.gitea/workflows/: ci.yml
.github/: BRANDS_SUBMISSION.md  MANUAL_VERIFICATION.md  PIPELINE_STATUS.md  PULL_REQUEST_TEMPLATE.md  QUALITY_SCALE_REVIEW.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  device_compatibility.md  device_request.yml  feature_request.md  feature_request.yml
.github/brands/: README.md  manifest.json
.github/scripts/: check-icon-regression.sh
.github/workflows/: benchmarks.yml  ci.yml  release.yml
custom_components/tuya_ble_mesh/: .icon-guard  __init__.py  _import_helper.py  binary_sensor.py  ble_adapter.py  button.py  config_flow.py  config_flow_ble.py  config_flow_discovery.py  config_flow_options.py  config_flow_reconfigure.py  config_flow_sig.py  config_flow_telink.py  config_flow_validators.py  connection_manager.py  const.py  coordinator.py  device_capabilities.py  device_factory.py  device_protocol.py  device_registry.py  device_trigger.py  diagnostics.py  entity.py  error_classifier.py  helpers.py  icons.json  light.py  logbook.py  manifest.json  polling_scheduler.py  quality_scale.yaml  reconnection.py  repairs.py  sensor.py  services.yaml  strings.json  switch.py  update.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRANDS_SUBMISSION.md  COVERAGE_REPORT.md  DECISIONS.md  DOMAIN.md  ESPHOME_PROXY.md  EXAMPLES.md  HARDENING.md  HARDWARE_TEST_LOG.md  HA_CORE_SUBMISSION.md  HA_DOCS_DRAFT.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  LEARNINGS.md  MANUAL_TESTING.md  PHASE4_HW_VALIDATION.md  PROTOCOL.md  README-E2E.md  README.md  SECURITY.md  SERVICES.md  SETUP_STATUS.md  SUPPORTED_DEVICES.md  SUPPORTED_FUNCTIONS.md  TESTING.md  USER_GUIDE.md  VERIFICATION_PLAT_423_424.md  premium_definition.md
docs/security/: THREAT_MODEL.md
lib/: pyproject.toml
lib/tuya_ble_mesh/: __init__.py  connection.py  const.py  crypto.py  device.py  device_protocol.py  dps.py  exceptions.py  logging_context.py  power.py  protocol.py  provisioner.py  scanner.py  secrets.py  sig_mesh_bridge.py  sig_mesh_crypto.py  sig_mesh_device.py  sig_mesh_device_commands.py  sig_mesh_device_notify.py  sig_mesh_protocol.py  sig_mesh_protocol_codec.py  sig_mesh_provisioner.py  sig_mesh_provisioner_connection.py
lib/tuya_ble_mesh/transport/: __init__.py  correlation.py  dispatcher.py  request.py  result.py
profiles/: 9917072_smart_plug.yaml  9917076_dosdimmer.yaml  9952126_led_driver.yaml
scripts/: ble_diag.py  ble_mesh_daemon.py  create-github-release.sh  debug_telink_pair.py  dual-review.py  explore_device.py  factory_reset.py  get_dev_ha_token.py  git-setup-remote.sh  hw_validate.py  interactive_demo.py  mesh_provision.py  mesh_provision_pty.py  mesh_proxy_cmd.py  pb_gatt_provision.py  power_cycle.py  probe_s17.py  provision_attempt.py  run-checks.sh  scan.py  send_cmd_robust.py  setup-1password-vault.sh  sniff.py  sniff_pcap.py  sync-bundled-lib.sh  test_pairing_debug.py  verify_creds.py
tests/: conftest.py
tests/benchmarks/: test_crypto_performance.py  test_protocol_performance.py  test_scanner_performance.py  (+1 more)
(+181 files in other folders)
