[project]
name = "tuya-ble-mesh"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["serial.*", "bleak.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real hardware (Shelly, BLE, sniffer)",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.detect-secrets]
exclude_files = '\.git/.*'
