[project]
name = "tuya-ble-mesh"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "homeassistant>=2024.1.0",
    "pyserial>=3.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["custom_components/tuya_ble_mesh/lib"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["custom_components/tuya_ble_mesh/lib"]

[[tool.mypy.overrides]]
module = ["serial.*", "bleak.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real hardware (Shelly, BLE, sniffer)",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.detect-secrets]
exclude_files = '(\.git/.*|strings\.json|translations/.*\.json)'
