[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuya-ble-mesh"
version = "0.21.0"
description = "Tuya BLE Mesh protocol library for local control of Tuya/Telink BLE mesh devices"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/11z4t/tuya-ble-mesh"
Repository = "https://github.com/11z4t/tuya-ble-mesh"

[tool.setuptools.packages.find]
include = ["tuya_ble_mesh*"]
